fix(css): don't let elgg-badge influence text alignment
fixes #11769

--- a/views/default/elements/components/menus.css
+++ b/views/default/elements/components/menus.css
@@ -212,6 +212,7 @@
 
 	.elgg-badge {
 		float: right;
+		margin-top: 0;
 	}
 
 	.elgg-anchor-icon {
